--- a/index.html
+++ b/index.html
@@ -428,7 +428,7 @@
                                 <a href="#" target="_blank">
                                     <i class="fab fa-twitter"></i>
                                 </a>
-                                <a href="#" target="_blank">
+                                <a href="https://github.com/k4kartik" target="_blank">
                                     <i class="fab fa-github"></i>
                                 </a>
                                 <a href="#" target="_blank">
