--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                     <p class="tl-duration">2023 - present</p>
                     <h5>System Engineer<span> - TCS</span></h5>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe quasi vero fugit.
+                        Working as PL/SQL Developer on tools like SQL Developer, JIRA, Selenium, Docker, etc.
                     </p>
                 </div>
                 <div class="timeline-item">
@@ -168,7 +168,18 @@
                     <p class="tl-duration">2020 - 2023</p>
                     <h5>Software Engineer<span> - Tech Mahindra Ltd</span></h5>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe quasi vero fugit.
+                        I worked as a developer on this project where my role is to develop code and configurations according to the requirements and story demands of the software designer's designs. 
+                        I work on PL/SQL language to fulfill the requirements and all other necessities.
+
+                        1) Well Versed and Experience in XML Processing and YAML.
+
+                        2) Worked on Stored Procedures, Functions, Triggers, CURSORS, and Packages. 
+
+                        3) Good Knowledge of DevOps Engineering in Jenkins Pipeline Automation, Selenium, JIRA, and Docker. 
+
+                        4) Written Shell Scripts for Unit Testing Automation for day-to-day project-related work.
+
+                        5) Unit Testing Automation to reduce code bugs and errors Via Jenkins & Sonar Qube.
                     </p>
                 </div>
                 <div class="timeline-item">
@@ -178,7 +189,7 @@
                     <p class="tl-duration">2019 - 2020</p>
                     <h5>Cyber Security Analyst<span> - Kyrion Technologies Pvt Ltd</span></h5>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe quasi vero fugit.
+                        Skills: Ethical Hacking · Penetration Testing · Kali Linux · Cybersecurity
                     </p>
                 </div>
                 <div class="timeline-item">
@@ -188,7 +199,7 @@
                     <p class="tl-duration">2018 - 2019</p>
                     <h5>IOT & ML Developer<span> - Inventrom Private Limited</span></h5>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe quasi vero fugit.
+                        Skills: IOT and ML · BOLT IOT CLOUD · Kali Linux · Cybersecurity
                     </p>
                 </div>
             </div>
