--- a/index.html
+++ b/index.html
@@ -433,18 +433,10 @@
                         </div>
                         <div class="contact-icons">
                             <div class="contact-icon">
-                                <a href="www.facebook.com" target="_blank">
-                                    <i class="fab fa-facebook-f"></i>
-                                </a>
-                                <a href="#" target="_blank">
-                                    <i class="fab fa-twitter"></i>
-                                </a>
-                                <a href="https://github.com/k4kartik" target="_blank">
-                                    <i class="fab fa-github"></i>
-                                </a>
-                                <a href="#" target="_blank">
-                                    <i class="fab fa-youtube"></i>
-                                </a>
+                                 <a href="https://www.linkedin.com/in/kartik-gupta-068798142/" target="_blank"><i class="fab fa-linkedin"></i></a>
+                                <a href="https://github.com/k4kartik" target="_blank"><i class="fab fa-github"></i></a>
+                                <a href="https://www.instagram.com/K4kartik" target="_blank"><i class="fab fa-instagram"></i></a>
+                                <a href="https://www.youtube.com/@unboxinghub3530/featured/" target="_blank"><i class="fab fa-youtube"></i></a>
                             </div>
                         </div>
                     </div>
