--- a/index.html
+++ b/index.html
@@ -171,15 +171,8 @@
                         I worked as a developer on this project where my role is to develop code and configurations according to the requirements and story demands of the software designer's designs. 
                         I work on PL/SQL language to fulfill the requirements and all other necessities.
 
-                        1) Well Versed and Experience in XML Processing and YAML.
-
-                        2) Worked on Stored Procedures, Functions, Triggers, CURSORS, and Packages. 
-
-                        3) Good Knowledge of DevOps Engineering in Jenkins Pipeline Automation, Selenium, JIRA, and Docker. 
-
-                        4) Written Shell Scripts for Unit Testing Automation for day-to-day project-related work.
-
-                        5) Unit Testing Automation to reduce code bugs and errors Via Jenkins & Sonar Qube.
+                        Skills: XML Processing and YAML.
+                        Good Knowledge of DevOps Engineering in Jenkins Pipeline Automation, Selenium, JIRA, and Docker. 
                     </p>
                 </div>
                 <div class="timeline-item">
@@ -302,11 +295,10 @@
                         <img src="img/port6.jpg" alt="">
                         <div class="blog-text">
                             <h4>
-                                How to Create Your Own Website
+                                The future of virtual reality in gaming and entertainment
                             </h4>
                             <p>
-                                Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
-                                Doloribus natus voluptas, eos obcaecati recusandae amet?
+                                This topic explores how virtual reality technology is changing the way we experience entertainment, and the potential for it to                                         revolutionize gaming, film, and other forms of media. It can cover topics such as the current state of VR technology, the challenges                                   and opportunities for content creators, and the potential impact on the future of entertainment.
                             </p>
                         </div>
                     </div>
@@ -314,11 +306,10 @@
                         <img src="img/blog1.jpg" alt="">
                         <div class="blog-text">
                             <h4>
-                                How to Become an Expert in Web Design
+                                The rise of decentralized finance and its impact on traditional banking systems
                             </h4>
                             <p>
-                                Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
-                                Doloribus natus voluptas, eos obcaecati recusandae amet?
+                                This topic discusses the emergence of decentralized finance (DeFi) and how it is disrupting the traditional banking industry. It can                                   cover topics such as the benefits and risks of DeFi, the role of blockchain technology in facilitating decentralized financial                                         transactions, and the potential impact on the future of banking and finance.
                             </p>
                         </div>
                     </div>
@@ -326,11 +317,10 @@
                         <img src="img/blog2.jpg" alt="">
                         <div class="blog-text">
                             <h4>
-                                Become a Web Designer in 10 Days
+                                The ethical implications of AI and machine learning
                             </h4>
                             <p>
-                                Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
-                                Doloribus natus voluptas, eos obcaecati recusandae amet?
+                                This topic explores the ethical considerations surrounding the development and use of artificial intelligence and machine learning                                     technology. It can cover topics such as the potential risks and benefits of AI, the responsibility of developers and users to ensure                                   ethical practices, and the potential impact on society as AI becomes more integrated into our daily lives.
                             </p>
                         </div>
                     </div>
@@ -338,11 +328,10 @@
                         <img src="img/blog3.jpg" alt="">
                         <div class="blog-text">
                             <h4>
-                                Debbuging made easy with Web Inspector
+                                The role of technology in combating climate change
                             </h4>
                             <p>
-                                Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
-                                Doloribus natus voluptas, eos obcaecati recusandae amet?
+                                This topic examines how technology is being used to address the challenges of climate change. It can cover topics such as renewable                                     energy technology, smart grid systems, and carbon capture and storage, as well as the potential impact of these technologies on                                         reducing greenhouse gas emissions and mitigating the effects of climate change.
                             </p>
                         </div>
                     </div>
@@ -350,11 +339,10 @@
                         <img src="img/port1.jpg" alt="">
                         <div class="blog-text">
                             <h4>
-                                Get started with Web Design and UI Design
+                                The impact of blockchain on supply chain management
                             </h4>
                             <p>
-                                Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
-                                Doloribus natus voluptas, eos obcaecati recusandae amet?
+                                This topic explores the potential of blockchain technology to revolutionize supply chain management. It can cover topics such as the                                   benefits of using blockchain for tracking and verifying supply chain transactions, the challenges and limitations of implementing                                       blockchain in supply chain management, and the potential impact on the future of supply chain management.
                             </p>
                         </div>
                     </div>
@@ -362,11 +350,10 @@
                         <img src="img/port3.jpg" alt="">
                         <div class="blog-text">
                             <h4>
-                                This is what you need to know about Web Design
+                                The emergence of quantum computing and its potential applications in various industries
                             </h4>
                             <p>
-                                Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
-                                Doloribus natus voluptas, eos obcaecati recusandae amet?
+                                This topic discusses the potential of quantum computing to transform various industries, including finance, healthcare, and                                             cybersecurity. It can cover topics such as the current state of quantum computing technology, the challenges and opportunities for                                     developing quantum applications, and the potential impact on the future of these industries.
                             </p>
                         </div>
                     </div>
